# Bomberman

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh  clang-format-checker.sh  clang-tidy-checker.sh  compile_commands.json  install.sh  uninstall.sh
include/: AudioPlayer.hpp  Clock.hpp  ClockWindows.hpp  FilePaths.hpp  FileReader.hpp  IndieError.hpp  InstallFilePaths.hpp  Randomizer.hpp  Redirect.hpp  Utils.hpp  Vector.hpp
include/ECS/: ECSErrors.hpp
include/ECS/Components/: Animation.hpp  Attributes.hpp  Bounds3d.hpp  Camera.hpp  Music.hpp  RenderableCubicMap3d.hpp  RenderableImage2d.hpp  RenderableImage3d.hpp  RenderableObject3d.hpp  RenderableRelief3d.hpp  RenderableText2d.hpp  RenderableText3d.hpp  Transform.hpp
include/ECS/Core/: ComponentArray.hpp  Components.hpp  ComponentsManager.hpp  Coordinator.hpp  Entities.hpp  EntitiesManager.hpp  Events.hpp  EventsManager.hpp  System.hpp  SystemsManager.hpp  Utils.hpp
include/ECS/Systems/: AnimationSystem.hpp  CameraSystem.hpp  CollisionSystem.hpp  CubicMap3dBoundsSystem.hpp  CubicMap3dRenderSystem.hpp  Image2dRenderSystem.hpp  Image3dRenderSystem.hpp  MusicSystem.hpp  Object3dBoundsSystem.hpp  Object3dRenderSystem.hpp  Relief3dBoundsSystem.hpp  Relief3dRenderSystem.hpp  Text2dRenderSystem.hpp  Text3dRenderSystem.hpp  TransformSystem.hpp
include/Game/: HUD.hpp  PlayersManager.hpp  Room.hpp  SettingsManager.hpp
include/Game/Map/: Error.hpp  IMapPart.hpp  Map.hpp  MapLoader.hpp  MapPart.hpp  MapReader.hpp  ObjectsInfos.hpp  PartType.hpp  Position.hpp
include/Game/Map/Items/: Bomb.hpp  Box.hpp  Fire.hpp  Ground.hpp  Wall.hpp
include/Game/Map/Player/: AIPlayer.hpp  APlayer.hpp  KeyBoardPlayer.hpp  OnlinePlayer.hpp
include/Game/Map/PowerUp/: APowerUp.hpp  BombNumberPowerUp.hpp  BombRangePowerUp.hpp  LifePowerUp.hpp  SpeedPowerUp.hpp
include/Graphic/: HitboxDisplayer.hpp  PointDisplayer.hpp  Renderer.hpp  RessourcesManager.hpp  Window.hpp
include/Network/: Client.hpp  Packers.hpp  ProtectedVar.hpp  Socket.hpp
include/Scenes/: CreditsScene.hpp  EndScene.hpp  GameScene.hpp  IScene.hpp  IntroScene.hpp  MainMenuScene.hpp  MapSelectionScene.hpp  MultiPlayerSelectionScene.hpp  PlayerScene.hpp  PlayerSelectionScene.hpp  ScenesManager.hpp  ServerConnectionScene.hpp  SettingsScene.hpp  TutoScene.hpp  WaitingScene.hpp
src/: AudioPlayer.cpp  Clock.cpp  FileReader.cpp  IndieError.cpp  Main.cpp  Redirect.cpp  Utils.cpp  Vector.cpp
src/ECS/: ECSErrors.cpp
src/ECS/Components/: Animation.cpp  Music.cpp  RenderableCubicMap3d.cpp  RenderableImage2d.cpp  RenderableImage3d.cpp  RenderableObject3d.cpp  RenderableRelief3d.cpp  RenderableText3d.cpp
src/ECS/Core/: Coordinator.cpp  EntitiesManager.cpp  EventsManager.cpp  System.cpp  SystemsManager.cpp
src/ECS/Systems/: AnimationSystem.cpp  CameraSystem.cpp  CollisionSystem.cpp  CubicMap3dBoundsSystem.cpp  CubicMap3dRenderSystem.cpp  Image2dRenderSystem.cpp  Image3dRenderSystem.cpp  MusicSystem.cpp  Object3dBoundsSystem.cpp  Object3dRenderSystem.cpp  Relief3dBoundsSystem.cpp  Relief3dRenderSystem.cpp  Text2dRenderSystem.cpp  Text3dRenderSystem.cpp  TransformSystem.cpp
src/Game/: HUD.cpp  PlayersManager.cpp  Room.cpp  SettingsManager.cpp
src/Game/Map/: Error.cpp  Map.cpp  MapLoader.cpp  MapPart.cpp  MapReader.cpp  Position.cpp
src/Game/Map/Items/: Bomb.cpp  Box.cpp  Fire.cpp  Ground.cpp  Wall.cpp
src/Game/Map/Player/: AIPlayer.cpp  APlayer.cpp  KeyBoardPlayer.cpp  OnlinePlayer.cpp
src/Game/Map/PowerUp/: APowerUp.cpp  BombNumberPowerUp.cpp  BombRangePowerUp.cpp  LifePowerUp.cpp  SpeedPowerUp.cpp
src/Graphic/: HitboxDisplayer.cpp  PointDisplayer.cpp  Renderer.cpp  RessourcesManager.cpp  Window.cpp
src/Network/: Client.cpp  Packers.cpp
src/Scenes/: CreditsScene.cpp  EndScene.cpp  GameScene.cpp  IntroScene.cpp  MainMenuScene.cpp  MapSelectionScene.cpp  MultiPlayerSelectionScene.cpp  PlayerScene.cpp  PlayerSelectionScene.cpp  ScenesManager.cpp  ServerConnectionScene.cpp  SettingsScene.cpp  TutoScene.cpp  WaitingScene.cpp
tests/: CollisionsTests.cpp  ECSTests.cpp  GraphicTests.cpp  PlayersManagerTests.cpp  RendererTests.cpp  StartTests.cpp  TransformTests.cpp  UtilsTests.cpp  VectorTests.cpp
